# uvm_bridge

./: .gitignore  CMakeLists.txt  MANIFEST.in  README-zh.md  README.md  api.sv  compile.bat  compile.sh  example.cpp  pyproject.toml  run.py  setup.py  svuvm_pkg.sv
.github/: dependabot.yml
.github/workflows/: claude.yml  python-package.yml  release.yml  test.yml
docs/: Doxyfile  idv_doxyfilter_sv.pl
inc/: _pli_types.h  dpi_stub.c  svuvm.def  uvm_debug.svh  uvm_dpi.h  veriuser.h  vpi_user_wrap.h
script/: gen_vpi_handle_type.py  install_verilator.sh  install_verilator_cmake.sh  install_verilator_windows.ps1
scripts/: gen_stub.py  generate_sv_export.py  generate_vpi_attr.py
src/: svuvm.cpp  uvm_debug_pkg.sv
src/pysvuvm/: config.py  python_bridge_pkg.sv  svuvm.cpp  svuvm_pkg.sv
src/svuvm/: __init__.py  config.py  python_bridge_pkg.sv  svuvm.cpp  svuvm.pyi  vpi.pyi
test/: Makefile  api.sv  base_test.py  run.py  svuvm_pkg.sv  top.sv  uvm_debug_test.sv
test/base_test/: CMakeLists.txt  Makefile  base_test.py  top.sv
test/cocotb_test/: CMakeLists.txt  Makefile  base_test.py
