[project]
name = "svuvm"
version = "0.1.0"
description = "Hardware verification framework enabling Python to call SystemVerilog UVM APIs for writing test cases and dynamically configuring verification environments"
authors = [
    { name = "Dragon-Git", email = "1762578117@qq.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.9"

[project.optional-dependencies]
lint = ['ruff']
doc = ['sphinx']
test = ['pytest', 'coverage', 'pytest-cov']
dev = ['svuvm[lint, doc, test]']

[build-system]
requires = [
    "scikit-build-core>=0.9.0",
    "nanobind>=2.4.0",
    "pyslang>=11.0.0",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.verbose = true
logging.level = "INFO"

[tool.ruff]
line-length = 120

[tool.ruff.lint.pydocstyle]
    convention = "google"
