[project]
name = "svuvm"
version = "0.1.0"
description = "Hardware verification framework enabling Python to call SystemVerilog UVM APIs for writing test cases and dynamically configuring verification environments"
authors = [
    { name = "Dragon-Git", email = "1762578117@qq.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.9"

[project.optional-dependencies]
lint = ['ruff']
doc = ['sphinx']
test = ['pytest', 'coverage', 'pytest-cov']
dev = ['svuvm[lint, doc, test]']

[build-system]
requires = [
    "scikit-build-core>=1.0.0, <2.0.0",
    "nanobind>=2.4.0, <3.0.0",
    "pyslang>=11.0.0, <12.0.0",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.15"
build.verbose = true
logging.level = "INFO"

# Ensure the wheel is properly named across platforms
wheel.py-api = "cp312"
wheel.expand-macos-universal-tags = true

[tool.ruff]
line-length = 120

[tool.ruff.lint.pydocstyle]
    convention = "google"

[tool.cibuildwheel]
# Build settings for cibuildwheel
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "pp* *_s390x *-musllinux*"

[tool.cibuildwheel.windows]
test-skip = "*"

[tool.cibuildwheel.linux]
before-build = "pip install cmake"

[tool.cibuildwheel.macos]
before-build = "pip install cmake"
